--- a/.env-example
+++ b/.env-example
@@ -1,6 +1,6 @@
 QUEST_PRIORITY=true
-MINUTES_BATTLES_INTERVAL=30
-ERC_THRESHOLD=80
+MINUTES_BATTLES_INTERVAL=5
+ERC_THRESHOLD=50
 CLAIM_SEASON_REWARD=false
 CLAIM_QUEST_REWARD=true
 HEADLESS=true
@@ -9,9 +9,7 @@ LOGIN_VIA_EMAIL=false
 EMAIL=account1@email.com,account2@email.com,account3@email.com
 ACCUSERNAME=username1,username2,username3
 PASSWORD=password1,password2,password3
-USE_API=true
-API_URL=http://splinterlandsapi.pcjones.de:8080/
-USE_CLASSIC_BOT_PRIVATE_API=false
 DEBUG=true
 RATING_MIN=80
 RATING_MAX=1000
+CHECK_UPDATES=true
