--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hammer-splinterlands-bot",
-  "version": "0.2.0",
+  "version": "0.7.0",
   "description": "A fast and efficient multi-account splinderlands bot based on 'ultimate-splinterlands-bot'",
   "main": "index.tsx",
   "scripts": {
@@ -12,6 +12,7 @@
   "dependencies": {
     "chalk": "^4.1.2",
     "dimas-kmeans": "^1.0.3",
+    "discord-webhook-node": "^1.1.8",
     "dotenv": "^8.2.0",
     "hierarchical-clustering": "^1.1.0",
     "minimist": ">=1.2.3",
