--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hammer-splinterlands-bot",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "description": "A fast and efficient multi-account splinderlands bot based on 'ultimate-splinterlands-bot'",
   "main": "index.tsx",
   "scripts": {
@@ -10,6 +10,7 @@
   "author": "Bram Hammer",
   "license": "GPL-3.0",
   "dependencies": {
+    "JSONStream": "^1.3.5",
     "chalk": "^4.1.2",
     "dimas-kmeans": "^1.0.3",
     "discord-webhook-node": "^1.1.8",
