--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hammer-splinterlands-bot",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "description": "A fast and efficient multi-account splinderlands bot based on 'ultimate-splinterlands-bot'",
   "main": "index.tsx",
   "scripts": {
@@ -10,12 +10,13 @@
   "author": "Bram Hammer",
   "license": "GPL-3.0",
   "dependencies": {
-    "JSONStream": "^1.3.5",
+    "auto-git-update": "^2.1.2",
     "chalk": "^4.1.2",
     "dimas-kmeans": "^1.0.3",
     "discord-webhook-node": "^1.1.8",
     "dotenv": "^8.2.0",
     "hierarchical-clustering": "^1.1.0",
+    "JSONStream": "^1.3.5",
     "minimist": ">=1.2.3",
     "moment": "^2.29.1",
     "node-fetch": "^2.6.1",
@@ -24,7 +25,6 @@
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/breakerh/hammer-splinterlands-bot.git"
